trying to fix mail

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ MAILGUN_DOMAIN=your-domain.com
 MAILGUN_FROM_EMAIL=noreply@your-domain.com
 MAILGUN_FROM_NAME=ROI Analysis Portal
 BASE_URL=https://your-domain.com
+
+# Email delivery behavior
+# console  - do not send; print to server console (default)
+# enabled  - send via Mailgun even in development
+# disabled - never send (useful for tests)
+EMAIL_DELIVERY=console
